Stopped Sq Brush elements stretching vertically

--- a/src/styles/component/sqbrush.module.scss
+++ b/src/styles/component/sqbrush.module.scss
@@ -4,6 +4,7 @@
   width: 100%;
   display: flex;
   margin-top: -50px;
+  align-items: flex-start;
 }
 .small.workExampleCon {
   margin-top: 20px;
